--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 
     <h1>Mongo Grid File Uploads</h1>
 
-    <form action="/upload" method="POST" enctype="multipart/form-data" >
-        <input type="file" name="UIfile" id="file" class="custom-file-input">
+    <form action="/new" method="POST" enctype="multipart/form-data" >
+        <input type="file" name="uiFile" id="file" class="custom-file-input">
         <label for="file" class="custom-file-label" >Choose File2</label>
         <input type="submit" value="submit">
     </form>
