rendering data from mongo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing MongoGRIDFS </title>
 </head>
-<body></body>
+<body>
+
+    <%- include('header.ejs') %> 
 
     <h1>Mongo Grid File Uploads</h1>
 
