readStreams for images and pdfs

--- a/views/Pdfs/files.ejs
+++ b/views/Pdfs/files.ejs
@@ -11,6 +11,8 @@
     <h1>Files</h1>  
     
     <% mfiles.forEach( file=>{  %> 
+        <label for="">File Object ID:</label> <%= file._id %> <br>
+        <label for="">File Object ID:</label> <%= file._id %> <br>
         <label for="">File Name:</label> <%= file.filename %> <br>
         <label for="">Content Type:</label> <%= file.contentType %> <br>
         <br>
