--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,7 +2,8 @@
     <div class="nav">
         <ul>
             <li><a href="/">Main Page</a></li>
-            <li><a href="/api/pdfs/files">Files</a></li>
+            <li><a href="/api/pdfs/files">Broken Files</a></li>
+            <li><a href="/files">Files</a></li>
             <li><a href="/api/pdfs">PDFs </a></li>
         </ul>
     </div>
